--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,10 +8,9 @@ $(function () {
     //get the id from the data attribute
     let id = $(this).data("id");
     $.get("/posts/" + id + "/body", function(data) {
-      alert(data);
+      //Replace text of body-id div
+      $("#body-" + id).text(data);
     });
   });
 });
 </script>
-
-
